[S] Fix assignment alignment issues on smaller screens

--- a/src/pages/overall/overall-course/assignment-entry/assignment-entry.scss
+++ b/src/pages/overall/overall-course/assignment-entry/assignment-entry.scss
@@ -57,6 +57,9 @@
         text-align: right;
         float: right;
 
+        // Fix smaller screen display issues.
+        width: unset;
+
         // Status / Problems
         span.status
         {
